--- a/shiro-example-chapter17-server/pom.xml
+++ b/shiro-example-chapter17-server/pom.xml
@@ -53,7 +53,11 @@
             <artifactId>jstl</artifactId>
             <version>1.2</version>
         </dependency>
-
+<dependency>
+    <groupId>org.mortbay.jetty</groupId>
+    <artifactId>jsp-2.1-glassfish</artifactId>
+    <version>9.1.02.B04.p0</version>
+</dependency>
 
         <dependency>
             <groupId>org.apache.shiro</groupId>
